--- a/emacs.org
+++ b/emacs.org
@@ -1148,6 +1148,9 @@ yas-keys
 ;; reset the executable to be my env's git
 ;; magit tries to set this before jw-env is called, pointing it to a different git
 (setq magit-git-executable (executable-find "git"))
+
+(setq transient-enable-popup-navigation t)
+(setq transient-display-buffer-action '(display-buffer-below-selected))
 #+END_SRC
 
 ** rcirc
