fix list-process to C-x p

--- a/emacs.org
+++ b/emacs.org
@@ -1504,6 +1504,7 @@ support ammonite repl in org babel, requires `amm` command, or ammonite-repl
 (global-set-key (kbd "C-x F") 'counsel-file-jump)
 (global-set-key (kbd "C-x b") 'counsel-switch-buffer)
 (global-set-key (kbd "C-x E") 'counsel-kmacro)
+(global-set-key (kbd "C-x p") 'counsel-list-processes)
 (global-set-key (kbd "C-x C-r") 'ivy-resume)
 (global-set-key (kbd "M-s o") 'swiper-thing-at-point)
 (global-set-key (kbd "C-s") 'swiper)
@@ -1514,7 +1515,6 @@ support ammonite repl in org babel, requires `amm` command, or ammonite-repl
 (global-set-key (kbd "M-s s") 'counsel-ag)
 (global-set-key (kbd "M-s r") 'counsel-rg)
 (global-set-key (kbd "C-M-y") 'counsel-yank-pop)
-(global-set-key (kbd "C-c h p") 'counsel-list-processes)
 (define-key counsel-find-file-map (kbd "C-l") 'counsel-up-directory)
 (define-key minibuffer-local-map (kbd "C-r") 'counsel-minibuffer-history)
 (add-hook 'eshell-mode-hook (lambda () (define-key eshell-mode-map (kbd "M-p") 'counsel-esh-history)))
