--- a/emacs.org
+++ b/emacs.org
@@ -1112,29 +1112,26 @@ If the server is connected and a prefix arg is provided, then invoke a quick /ms
 (advice-add 'rcirc-handler-NOTICE :around 'rcirc-handler-NOTICE--advice--ignore-KEEPALIVE)
 #+END_SRC
 
-here are some useful rcirc configs to set in in the safe =private= location
+example rcirc usage:
 #+BEGIN_SRC emacs-lisp :tangle no
 (setq rcirc-default-nick "nick"
       rcirc-default-user-name "username"
       rcirc-default-full-name "full name"
-      rcirc-keywords '("nick1" "nick2")
-      rcirc-server-alist '(("irc.freenode.net"
+      rcirc-keywords '("nick" "username")
+      rcirc-server-alist '(("irc.libera.chat"
                             :port 6697
                             :encryption tls
-                            :user-name "freenode username"
-                            :password "free node pass"
-                            :channels ("##doctorwho"))))
-#+END_SRC
+                            :user-name "username"
+                            :password "pass"
+                            :channels ("#emacs"))))
 
-example of defining specific functions to connect to various irc servers
-#+BEGIN_SRC emacs-lisp :tangle no
-(defun freenode-irc-connect ()
+(defun rcirc-connect-libera ()
   (interactive)
-  (rcirc-connect-dwim "irc.freenode.net" 6697 "nick" "username" "full name" '("##doctorwho" "#emacs") "your password" 'tls)
+  (rcirc-connect-dwim "irc.libera.chat" 6697 "nick" "nick" "nick" '("#emacs") "password" 'tls)
 
-(defun twitch-irc-connect ()
+(defun rcirc-connect-gitter ()
   (interactive)
-  (rcirc-connect-dwim "irc.chat.twitch.tv" 6667 "nick" "username" "full name" nil "your password"))
+  (rcirc-connect-dwim "irc.gitter.im" 6667 "username" "username" "username" nil "pass token" 'tls))
 #+END_SRC
 
 ** org
